--- a/src/app/components/swapped-sidepanel/smart-ticket-noti/static-smartTicketNoti.component.scss
+++ b/src/app/components/swapped-sidepanel/smart-ticket-noti/static-smartTicketNoti.component.scss
@@ -1,3 +1,7 @@
+:host {
+  height: 100%;
+}
+
 kendo-card.border-bottom {
   border-color: rgba(229, 229, 229, 0.2) !important;
 }
@@ -26,4 +30,8 @@ h5 .sev-level-dot {
 .badge.bg-danger,
 .sev-level-dot.bg-danger {
   background: #F82F2F !important;
+}
+
+.header-section {
+  z-index: 1;
 }
